Working on circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,15 @@
 jobs:
+  build:
+    working_directory: ~/incapsula-cracker-py3
+    docker:
+      - image: circleci/python:3.4
+    steps:
+      - checkout
   p27:
     docker:
       - image: circleci/python:2.7
     working_directory: ~/incapsula-cracker-py3
     steps:
-      - checkout
       - run:
         command: |
           printf "Using: " && python --version
@@ -13,7 +18,6 @@ jobs:
       - image: circleci/python:3.4
     working_directory: ~/incapsula-cracker-py3
     steps:
-      - checkout
       - run:
         command: |
           printf "Using: " && python --version
