Working on circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ jobs:
     working_directory: ~/incapsula-cracker-py3
     steps:
       - run:
+        name: Showing Python Version
         command: |
           printf "Using: " && python --version
   p34:
@@ -19,11 +20,13 @@ jobs:
     working_directory: ~/incapsula-cracker-py3
     steps:
       - run:
+        name: Showing Python Version
         command: |
           printf "Using: " && python --version
 
 workflows:
   version: 2
-  jobs:
-    - p27
-    - p34
+  build_and_test:
+    jobs:
+      - p27
+      - p34
