--- a/circle.yml
+++ b/circle.yml
@@ -10,17 +10,13 @@ jobs:
       - image: circleci/python:2.7
     working_directory: ~/incapsula-cracker-py3
     steps:
-      - run:
-        command: |
-          printf "Using: " && python --version
+      - run: printf "Using: " && python --version
   p34:
     docker:
       - image: circleci/python:3.4
     working_directory: ~/incapsula-cracker-py3
     steps:
-      - run:
-        command: |
-          printf "Using: " && python --version
+      - run: printf "Using: " && python --version
 
 workflows:
   version: 2
