--- a/circle.yml
+++ b/circle.yml
@@ -1,25 +1,30 @@
+defaults: &defaults
+  working_directory: ~/incapsula-cracker-py3
+
 version: 2
 jobs:
   build:
-    working_directory: ~/incapsula-cracker-py3
+    <<: *defaults
     docker:
       - image: ubuntu:14.04
       - image: python:3.4
     steps:
       - checkout
-  p27:
-    working_directory: ~/incapsula-cracker-py3
+  build-p27:
+    <<: *defaults
     docker:
       - image: ubuntu:14.04
       - image: python:2.7
     steps:
+      - checkout
       - run: printf Using: && python --version
-  p34:
-    working_directory: ~/incapsula-cracker-py3
+  build-p34:
+    <<: *defaults
     docker:
       - image: ubuntu:14.04
       - image: python:3.4
     steps:
+      - checkout
       - run: printf Using: && python --version
 
 workflows:
@@ -27,5 +32,5 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - p27
-      - p34
+      - build-p27
+      - build-p34
