--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,30 @@
-version: 2
+defaults: &defaults
+  working_directory: ~/incapsula-cracker-py3
 
+version: 2
 jobs:
   build:
-    working_directory: ~/incapsula-cracker-py3
+    <<: *defaults
+  build-p27:
+    <<: *defaults
     docker:
-      - image: themattrix/tox
+      - image: ubuntu:14.04
+      - image: python:2.7
     steps:
       - checkout
-      - run: tox
+      - run: printf Using: && python --version
+  build-p34:
+    <<: *defaults
+    docker:
+      - image: ubuntu:14.04
+      - image: python:3.4
+    steps:
+      - checkout
+      - run: printf Using: && python --version
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build-p27
+      - build-p34
