--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ jobs:
       - image: python:2.7
     steps:
       - checkout
-      - run: printf Using: && python --version
+      - run: printf Using- && python --version
   build-p34:
     <<: *defaults
     docker:
@@ -20,7 +20,7 @@ jobs:
       - image: python:3.4
     steps:
       - checkout
-      - run: printf Using: && python --version
+      - run: printf Using- && python --version
 
 workflows:
   version: 2
