--- a/circle.yml
+++ b/circle.yml
@@ -7,20 +7,20 @@ jobs:
     <<: *defaults
     docker:
       - image: ubuntu:14.04
-      - image: python:2.7
     steps:
+      run:
+        command: |
+          apt-get install -y git
       - checkout
   build-p27:
     <<: *defaults
     docker:
-      - image: ubuntu:14.04
       - image: python:2.7
     steps:
       - checkout
   build-p34:
     <<: *defaults
     docker:
-      - image: ubuntu:14.04
       - image: python:3.4
     steps:
       - checkout
