--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       run:
         command: |
+          apt-get -y update
           apt-get install -y git
       - checkout
   build-p27:
@@ -17,12 +18,20 @@ jobs:
     docker:
       - image: python:2.7
     steps:
+      run:
+        command: |
+          apt-get -y update
+          apt-get install -y git
       - checkout
   build-p34:
     <<: *defaults
     docker:
       - image: python:3.4
     steps:
+      run:
+        command: |
+          apt-get -y update
+          apt-get install -y git
       - checkout
 
 workflows:
