--- a/circle.yml
+++ b/circle.yml
@@ -8,30 +8,30 @@ jobs:
     docker:
       - image: ubuntu:14.04
     steps:
-      run:
-        command: |
+      - run:
+        command: "|
           apt-get -y update
-          apt-get install -y git
+          apt-get install -y git"
       - checkout
   build-p27:
     <<: *defaults
     docker:
       - image: python:2.7
     steps:
-      run:
-        command: |
+      - run:
+        command: "|
           apt-get -y update
-          apt-get install -y git
+          apt-get install -y git"
       - checkout
   build-p34:
     <<: *defaults
     docker:
       - image: python:3.4
     steps:
-      run:
-        command: |
+      - run:
+        command: "|
           apt-get -y update
-          apt-get install -y git
+          apt-get install -y git"
       - checkout
 
 workflows:
