--- a/circle.yml
+++ b/circle.yml
@@ -1,32 +1,45 @@
 defaults: &defaults
   working_directory: ~/incapsula-cracker-py3
+  docker:
+    - image: ubuntu:14.04
+  steps:
+    - run:
+        name: "Update package manager..."
+        command: "apt-get -y update"
+    - run:
+        name: "Install git..."
+        command: "apt-get install -y git"
+    - checkout
+
+python_defaults: &python_defaults
+  working_directory: ~/incapsula-cracker-py3
+  steps:
+    - run:
+        name: "Update package manager..."
+        command: "apt-get -y update"
+    - run:
+        name: "Install git..."
+        command: "apt-get install -y git"
+    - checkout
+    - run:
+        name: "Install nose..."
+        command: "python -m pip install nose"
+    - run:
+        name: "Nosetests"
+        command: "nosetests -v"
 
 version: 2
 jobs:
   build:
     <<: *defaults
-    docker:
-      - image: ubuntu:14.04
-    steps:
-      - run:
-          command: "apt-get -y update && apt-get install -y git"
-      - checkout
   build-p27:
-    <<: *defaults
+    <<: *python_defaults
     docker:
       - image: python:2.7
-    steps:
-      - run:
-          command: "apt-get -y update && apt-get install -y git"
-      - checkout
   build-p34:
-    <<: *defaults
+    <<: *python_defaults
     docker:
       - image: python:3.4
-    steps:
-      - run:
-          command: "apt-get -y update && apt-get install -y git"
-      - checkout
 
 workflows:
   version: 2
