Install requirements.txt in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,9 @@ python_defaults: &python_defaults
         command: "apt-get install -y git"
     - checkout
     - run:
+        name: "Install dependencies..."
+        command: "python -m pip install -r requirements.txt"
+    - run:
         name: "Install nose..."
         command: "python -m pip install nose"
     - run:
