--- a/circle.yml
+++ b/circle.yml
@@ -1,29 +1,55 @@
+defaults: &defaults
+  working_directory: ~/incapsula-cracker-py3
+  docker:
+    - image: ubuntu:14.04
+  steps:
+    - run:
+        name: "Update package manager..."
+        command: "apt-get -y update"
+    - run:
+        name: "Install git..."
+        command: "apt-get install -y git"
+    - checkout
+
+python_defaults: &python_defaults
+  working_directory: ~/incapsula-cracker-py3
+  steps:
+    - run:
+        name: "Update package manager"
+        command: "apt-get -y update"
+    - run:
+        name: "Install git"
+        command: "apt-get install -y git"
+    - checkout
+    - run:
+        name: "Install dependencies"
+        command: "python -m pip install -r requirements.txt"
+    - run:
+        name: "Install nose"
+        command: "python -m pip install nose"
+    - run:
+        name: "Python version"
+        command: "printf Using- && python --version"
+    - run:
+        name: "Nosetests"
+        command: "nosetests -v"
+
 version: 2
 jobs:
   build:
-    working_directory: ~/incapsula-cracker-py3
-    docker:
-      - image: python:3.4
-    steps:
-      - checkout
-      - run:
-        name: Trigger Jobs
-        command:
-          trigger_job build-p27
-          trigger_job build-p34
+    <<: *defaults
   build-p27:
+    <<: *python_defaults
     docker:
       - image: python:2.7
-    working_directory: ~/incapsula-cracker-py3
-    steps:
-      - run:
-        command: |
-          printf "Using: " && python --version
   build-p34:
+    <<: *python_defaults
     docker:
       - image: python:3.4
-    working_directory: ~/incapsula-cracker-py3
-    steps:
-      - run:
-        command: |
-          printf "Using: " && python --version
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build-p27
+      - build-p34
